# multitape_turing_emulator

./: CMakeLists.txt  README.md
turing/: turing.c
